--- a/web/css/main.css
+++ b/web/css/main.css
@@ -112,7 +112,7 @@ textarea {
 body{
 	background-color: #eee;
 	margin: 0;
-	padding: 0;
+	padding: 1em;
 }
 
 	
@@ -134,7 +134,7 @@ body{
 	margin: 45px 0 0 60px;
 	position: absolute;
 	padding: 0 20px;
-	right: 20px;
+	right: 40px;
 	width: 300px;
 	z-index: 100;
 }
