diseinu aldaketak eta bidegorri eguneraketa

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,17 +3,15 @@ title: Gipuzkoako Bidegorriak
 ---
 
 <h1 class="visuallyhidden">Gipuzkoako bidegorriak</h1>
-<div id="bidegorri-map">
-	<div class="credits">
-		<p class="bidegorri-logo">
-			<img src="images/logo.png" alt="Gipuzkoako bidegorriak" />
-		</p>
-		<p>Hemen duzu Gipuzkoako bidegorri sarearen mapa bat.</p>
-		<p>Akatsen bat du oraindik baina <a href="https://github.com/bardulia/bidegorriak">Github</a>-en dago kodea, berrerabili edo falta diren bidegorrien <abbr title="Geography Markup Language">GML</abbr>ak gehitu nahi izanez gero.</p>
-		<p>Txintxo ibili.</p> 
-		<p class="small-credit">Maparen datuak © <a href="http://www.openstreetmap.org/">OpenStreetMap</a>en kolaboratzaileak, <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Creative Commons &mdash; Attribution-ShareAlike 2.0 Generic
-		  &mdash; CC BY-SA 2.0">CC BY-SA</a> lizentziapean eta <a href="http://b5m.gipuzkoa.net">b5m</a></p>
-	</div>
+<div class="logo">
+	<img src="images/logo.png" alt="Gipuzkoako bidegorriak" />
+</div>
+<div id="bidegorri-map"></div>
+<div class="credits">
+	
+	<p>Hemen duzu Gipuzkoako bidegorri sarearen mapa bat. Akatsen bat du oraindik baina <a href="https://github.com/bardulia/bidegorriak">Github</a>-en dago kodea, berrerabili edo falta diren bidegorrien <abbr title="Geography Markup Language">GML</abbr>ak gehitu nahi izanez gero. Maparen datuak © <a href="http://www.openstreetmap.org/">OpenStreetMap</a>en kolaboratzaileak, <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Creative Commons &mdash; Attribution-ShareAlike 2.0 Generic
+	  &mdash; CC BY-SA 2.0">CC BY-SA</a> lizentziapean eta <a href="http://b5m.gipuzkoa.net">b5m</a><br />
+	Txintxo ibili.</p> 
 </div>
 <script type="text/javascript">
 
