diseinu aldaketa gehiago

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,7 +16,7 @@
     OpenLayersExtLoader.load( {
       "version":  "1.0",
       "debug":    false,
-      "height":   "800px",
+      "height":   "1000px",
       "config": {
         "whatishere": {
           "enabled": false
@@ -24,7 +24,7 @@
       }
     });
     </script>
-    <%= javascript_include_tag  "main", "application" %>
+    <%= javascript_include_tag  "/javascripts/main.js" %>
   </head>
   
   <body>
