--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= data.page.title || "Gipuzkoako bidegorriak" %></title>
     
-    <%= stylesheet_link_tag "main" %>
+    <%= stylesheet_link_tag( "main") %>
    
     <script src="http://b5m.gipuzkoa.net/api/1.0/eu/library/openlayers-ext/openlayers-ext-loader.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -24,7 +24,7 @@
       }
     });
     </script>
-    <%= javascript_include_tag  "/javascripts/main.js" %>
+    <%= javascript_include_tag( "/javascripts/main.js") %>
   </head>
   
   <body>
