--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,17 +11,17 @@
     
     <%= stylesheet_link_tag( "main") %>
    
-    <!--
     <script src="http://b5m.gipuzkoa.net/api/1.0/eu/library/openlayers-ext/openlayers-ext-loader.js" type="text/javascript"></script>
-    -->
 
+    <!--
     <script src="http://localhost:3000/api/1.0/eu/library/openlayers-ext/openlayers-ext-loader.js" type="text/javascript"></script>
+    -->
 
     <script type="text/javascript">
     OpenLayersExtLoader.load( {
       "version":  "1.0",
-      "debug":    false,
-      //"debug":    true,
+      //"debug":    false,
+      "debug":    true,
       "height":   "1000px",
       "config": {
         "whatishere": {
